# my-first-lm

./: README.md
finetuning/: __init__.py  finetuning_gemma.ipynb  pyproject.toml  requirements.txt
